[tool.poetry]
name = "hiring-code-review"
version = "0.1.0"
description = ""
authors = ["Benjamin Mollier <benjamin.mollier@meetap.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
